# tk_compiler

./: .clang-format  CMakeLists.txt  CMakePresets.json  conanfile.txt
.github/workflows/: linux_tests.yml
cmake/: common.cmake  conan.cmake  flex_bison.cmake
compiler/: CMakeLists.txt
compiler/include/: driver.h  function_info.h  global.h  parser.h  scanner.h  symbol.h  symbol_table.h  symbol_table_entry.h  symbol_type.h  variable_type.h
compiler/src/: driver.cpp  error.c  lexer.cpp  parser.cpp  symbol.c  symbol_table.cpp  symbol_table_entry.cpp  variable_type.cpp
compiler/tests/: arrays.cpp  boolean_operations.cpp  bubblesort.cpp  calling_functions.cpp  conditional_expressions.cpp  functions.cpp  generate_output.cpp  parse_declarations.cpp  parse_expressions.cpp  parse_syntax.cpp  procedures.cpp  real_numbers.cpp  relation_operations.cpp  test.cpp  while_loop.cpp
compiler/tests/test_data/: all_simple.txt  four_var.txt  one_var.txt  one_var_const.txt  simple_from_web.txt  simple_from_web_with_error.txt  simplest.txt
compiler_cli/: CMakeLists.txt
compiler_cli/include/: cli_utils.h
compiler_cli/src/: cli_utils.cpp  main.cpp
compiler_cli/tests/: functions_procedures.pas
